* 2009-12-15 sclang: 64bit safety - tb
* 2009-12-15 sclang: performance improvement of math ops - tb
* 2010-01-02 scsynth: use osc-compilant address patterns for server/lang communication - tb


Bugfixes:
---------

* 2009-06-23 avoid memory corruption when unknown OSC type tags are received. Instead forward them to sclang - jr
* 2009-06-23 Fix server crash with negative buffer numbers. - jr
* 2009-07-20 factors(): no prime factors exist below the first prime - jr
* 2009-07-21 Loudness ugen now supports LocalBuf - nc
* 2009-07-23 Fix very nasty bug in Pbindf: if a key is an array, new values were written into the incoming event, instead of the outgoing event - jh
* 2009-07-28 catch unintialised value in sc_GetUserHomeDirectory(), fixing potential memory corruption if HOME not set - ds
* 2009-08-01 SpecCentroid, fix its reaction to silence (output zero instead of NaN) - ds
* 2009-08-01 NamedControl: single default value now returns instance, not array, default values are obtained in a consistent way - jr
* 2009-08-04 fix the CPU-usage issue when calling plain "./sclang" from the terminal on OSX (seems it was caused by a bug in how OSX handles poll() calls) - ds
* 2009-08-15 LinPan2: fix initialisation issue - panning was not correctly applied during the first calc block - ds
* 2009-09-13 fix PV_MagShift argument handling, so that the defaults mean no-change, matching the behaviour of PV_BinShift - ds
* 2009-09-20 warn about weirdness of Float:switch - ds
* 2009-09-30 prevent NaN output from SpecFlatness when input is silence - ds
* 2009-10-16 fix cropping issue in printing SuperCollider.app documents - cq
* 2009-10-17 many phase-vocoder (PV_) ugens previously didn't handle the DC/nyquist bins as expected. fixed most of these (PV_MagAbove, PV_MagBelow, PV_MagClip, PV_LocalMax, PV_BrickWall, PV_MagSquared, PV_BinWipe, PV_CopyPhase, PV_Max, PV_RandComb) - ds
* 2009-11-01 fix audio rate arg problem in PlayBuf - jp